# grafana-inspection-agent

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.zh-CN.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  pyproject.toml  renovate.json  tsc-building-block.yml
config/: config.example.yaml
docs/: ARCHITECTURE.zh-CN.md  README.zh-CN.md  report-quality-evaluation.zh-CN.md
src/grafana_agent_langgraph/: __init__.py  config.py  daily_report.py  grafana_client.py  jvm_report.py  llm_client.py  logger.py  main.py  notifier.py  report_generator.py  report_quality_eval.py  runtime.py  slow_query_report.py  workflow.py
tests/: test_report_generator.py
