[project]
name = "grafana-agent-langgraph"
version = "0.1.0"
description = "Grafana inspection agent refactored with LangGraph StateGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosmtplib>=5.1.0",
    "email-validator>=2.3.0",
    "langchain-core>=1.2.20",
    "langgraph>=1.1.3",
    "markdown>=3.10.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]

[project.scripts]
grafana-agent-langgraph = "grafana_agent_langgraph.main:cli"
grafana-agent-report-eval = "grafana_agent_langgraph.report_quality_eval:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
